﻿10.2.30.alpha.1 - 22nd May 2024
- Added a new option 'Show Theads of Time' ('Interface').  If enabled, your character's total Threads of Time will be shown in the character frame next to the average item level.
- For 'Mount mount sounds', you can now make jewelcrafting panther mounts quieter ('Panthers').

10.2.28 - 22nd May 2024
- For 'Enhance minimap', added support for Narcissus custom minimap button.
- For 'Mute mount sounds', fixed an issue whereby mount sounds would be muted/unmuted on startup even if the option was disabled.

10.2.26 - 8th May 2024
- Updated for game patch 10.2.7.
- For 'Mute mount sounds', added 'Soar' (Dracthyr).
- Added ability to toggle the main panel by clicking the slash command logo in the interface options panel.

10.2.24 - 24th April 2024
- Added a new setting called 'Keep audio synced' ('System').  If checked, when you change the audio output device in your operating system, the game audio output device will change automatically.|n|nFor this to work, the game audio output device will be set to system default.

10.2.23 - 10th April 2024
- For 'Remove transforms' ('System'), added a new setting 'Noblegarden: Noblegarden Bunny".  If checked, Noblegarden bunny transforms will be removed when applied.
- Leatrix addons for Cataclysm Classic will be available April 2024.

10.2.22 - 3rd April 2024
- For 'Mute mount sounds' ('System'), added 'Fish'.  If checked, fish mounts will be quieter.  This applies to Wondrous Wavewhisker.

10.2.21 - 27th March 2024
- Updated deprecated functions.
- For 'Enhance tooltip' ('Interface'), fixed a Lua error with the 'Akunda the Nimble' (Vol'dun) tooltip.

10.2.20 - 20th March 2024
- Updated for game patch 10.2.6.
- For 'Filter chat messages' ('Chat'), added a new setting 'Block Angelis and Sinny spam' (from the Bondable Val'kyr Diadem and Bondable Sinstone toys).

10.2.19 - 13th March 2024